<resources>

    <string name="app_name">Task Manager</string>
    <string name="title">SIT708 Task Manager App</string>
    <string name="task_list">Task List</string>
    <string name="option">Task Options</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="back">Back to Home</string>

    <string-array name="sort_options">
        <item>Date Ascend</item>
        <item>Date Descend </item>
    </string-array>

    <string name="add_title">Add Task</string>
    <string name="name">Task Name</string>
    <string name="description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="place">-</string>


    <string name="edit_title">Edit Task</string>
    <string name="choose">Choose</string>

    <string name="delete_title">Delete Task</string>
    <string name="delete_spinner">Choose task to be deleted below</string>

    <string name="nav_home">Home</string>
    <string name="nav_exit">Exit</string>

</resources>