<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/bottom_nav"
        android:padding="12dp"
        android:gravity="center">

        <TextView
            android:id="@+id/delete_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="105dp" />

        <TextView
            android:id="@+id/delete_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_spinner"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/task_spinner"
            android:layout_width="180dp"
            android:layout_height="54dp"
            android:layout_marginVertical="20dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/delete"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/back"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"/>

        <TextView
            android:id="@+id/delete_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"
        tools:ignore="VisualLintBottomNav" />

</RelativeLayout>