<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/bottom_nav"
        android:padding="12dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="105dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textSize="24sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textSize="24sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:autofillHints=""
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="24sp"
                    tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:autofillHints=""
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="24sp"
                    tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:autofillHints=""
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="24sp"
                    tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            </LinearLayout>

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/add"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/back"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"/>

        <TextView
        android:id="@+id/add_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginBottom="15dp"/>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"
        tools:ignore="VisualLintBottomNav" />

</RelativeLayout>